--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,31 @@ environment:
 dependencies:
   flutter:
    sdk: flutter
+  sqflite:
+#    A Flutter plugin for finding commonly used locations on the filesystem.
+#  Supports iOS, Android, Linux and MacOS. Not all methods are supported on all platforms.
+  path_provider: ^1.6.27
+#  A Flutter plugin for launching a URL in the mobile platform. Supports iOS, Android, web, Windows, macOS, and Linux.
+  url_launcher: ^5.7.10
+#  Media notification for flutter, on android
+  media_notification: ^0.0.5
+  font_awesome: ^5.10.1
+#  A Search App Bar like the one in Gmail and Google Photos.
+  floating_search_bar: ^0.3.0
+#  A flutter package which contains a collection of some cool and awesome text animations.
+  animated_text_kit: ^3.1.0
+#  Similar to a ListView, but lets you programmatically jump to any item, by index.
+  indexed_list_view: ^1.1.5
+#  Clip your widgets with custom shapes provided.
+  clippy_flutter: ^1.1.1
+#  A Flutter plugin to share content from your Flutter app via the platform's share dialog.
+  share: ^0.6.5+4
+  shared_preferences: ^0.5.12+4
+#  For logging
   fimber: ^0.4.4
   cupertino_icons: ^1.0.1
   dynamic_theme: ^1.0.1
+#  A set of utilities that allow you to easily pass a data Model from a parent Widget down to its descendants.
   scoped_model: ^1.1.0
 
 dev_dependencies:
