--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   dynamic_theme: ^1.0.1
 #  A set of utilities that allow you to easily pass a data Model from a parent Widget down to its descendants.
   scoped_model: ^1.1.0
+  flute_music_player: ^0.0.6
 
 dev_dependencies:
   flutter_test:
