--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
 #  A set of utilities that allow you to easily pass a data Model from a parent Widget down to its descendants.
   scoped_model: ^1.1.0
   flute_music_player: ^0.0.6
+  provider: ^3.2.0
 
 dev_dependencies:
   flutter_test:
