--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,13 +50,21 @@ dependencies:
 #  A set of utilities that allow you to easily pass a data Model from a parent Widget down to its descendants.
   scoped_model: ^1.1.0
   flute_music_player: ^0.0.6
-  provider: ^3.2.0
+  provider: ^4.3.3
+  stacked: ^1.7.7
+  stacked_services: ^0.6.4
+  auto_route: ^0.6.9
+  get_it:
+  injectable:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
+  build_runner:
+  auto_route_generator:
+  injectable_generator:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
